Home page almost complete

--- a/home.html
+++ b/home.html
@@ -109,7 +109,10 @@
           <div class="row gym-interiors gy-4 gx-md-5">
             <div class="col-md-4">
               <a class="img-wrapper" href="unisex-vikroli.html">
-                <img src="assets/home/featured/vikhroli.png" alt="vikhroli gym interior" />
+                <img
+                  src="assets/home/featured/vikhroli.png"
+                  alt="vikhroli gym interior"
+                />
               </a>
               <a href="unisex-vikroli.html" class="gym-location">
                 <p>Unisex Gym, Vikhroli</p>
@@ -117,7 +120,10 @@
             </div>
             <div class="col-md-4">
               <a class="img-wrapper" href="women-only-vikroli.html">
-                <img src="assets/home/featured/women.jpg" alt="women's gym interior" />
+                <img
+                  src="assets/home/featured/women.jpg"
+                  alt="women's gym interior"
+                />
               </a>
               <a href="women-only-vikroli.html" class="gym-location">
                 <p>Only Women's Gym, Vikhroli</p>
@@ -125,7 +131,10 @@
             </div>
             <div class="col-md-4">
               <a class="img-wrapper" href="unisex-thane.html">
-                <img src="assets/home/featured/thane.jpg" alt="thane gym interior" />
+                <img
+                  src="assets/home/featured/thane.png"
+                  alt="thane gym interior"
+                />
               </a>
               <a href="unisex-thane.html" class="gym-location">
                 <p>Unisex Gym, Thane</p>
@@ -249,7 +258,10 @@
         </div>
       </section>
 
-      <section class="highlight-banner-section"></section>
+      <section class="highlight-banner-section">
+        <img class="d-none d-md-block" src="assets/banners/home-banner-two-web.jpg" alt="gym banner">
+        <img class="d-md-none" src="assets/banners/home-banner-two-mob.png" alt="gym banner">
+      </section>
 
       <section class="py-4 py-md-5" id="clients">
         <div class="container">
@@ -258,38 +270,83 @@
           <div class="testimonials">
             <div>
               <div class="img-wrapper">
-                <img src="assets/profile-placeholder.png" alt="" />
+                <img
+                  src="assets/home/testimonials/1.png"
+                  alt="gym testimonials"
+                />
               </div>
               <p class="testimonial-name">Lorem ipsum.</p>
-              <p class="testimonial-location">Ghatkopar</p>
+              <p class="testimonial-location">Flex Iron isn't just a gym, it's where I unlock my true strength!</p>
             </div>
             <div>
               <div class="img-wrapper">
-                <img src="assets/profile-placeholder.png" alt="" />
+                <img
+                  src="assets/home/testimonials/2.jpg"
+                  alt="gym testimonials"
+                />
               </div>
-              <p class="testimonial-name">Lorem ipsum.</p>
-              <p class="testimonial-location">Ghatkopar</p>
+              <p class="testimonial-name">Kimaya Berde</p>
+              <p class="testimonial-location">Every workout session here feels like a step closer to greatness!</p>
             </div>
             <div>
               <div class="img-wrapper">
-                <img src="assets/profile-placeholder.png" alt="" />
+                <img
+                  src="assets/home/testimonials/3.png"
+                  alt="gym testimonials"
+                />
               </div>
-              <p class="testimonial-name">Lorem ipsum.</p>
-              <p class="testimonial-location">Ghatkopar</p>
+              <p class="testimonial-name">Sameer Dabilkar</p>
+              <p class="testimonial-location">The equipment is top-notch, and the energy is even better</p>
             </div>
             <div>
               <div class="img-wrapper">
-                <img src="assets/profile-placeholder.png" alt="" />
+                <img
+                  src="assets/home/testimonials/4.jpg"
+                  alt="gym testimonials"
+                />
               </div>
-              <p class="testimonial-name">Lorem ipsum.</p>
-              <p class="testimonial-location">Ghatkopar</p>
+              <p class="testimonial-name">Sakshi Kunwar</p>
+              <p class="testimonial-location">My second home for fitness, fun, and fabulous results!</p>
             </div>
             <div>
               <div class="img-wrapper">
-                <img src="assets/profile-placeholder.png" alt="" />
+                <img
+                  src="assets/home/testimonials/5.jpg"
+                  alt="gym testimonials"
+                />
               </div>
-              <p class="testimonial-name">Lorem ipsum.</p>
-              <p class="testimonial-location">Ghatkopar</p>
+              <p class="testimonial-name">Pushkraj Bhosale</p>
+              <p class="testimonial-location">Breaking limits every day, thanks to the amazing Flex Iron team</p>
+            </div>
+            <div>
+              <div class="img-wrapper">
+                <img
+                  src="assets/home/testimonials/6.jpg"
+                  alt="gym testimonials"
+                />
+              </div>
+              <p class="testimonial-name">Deepa Sapre</p>
+              <p class="testimonial-location">A gym where you feel supported, inspired, and unstoppable.</p>
+            </div>
+            <div>
+              <div class="img-wrapper">
+                <img
+                  src="assets/home/testimonials/7.jpg"
+                  alt="gym testimonials"
+                />
+              </div>
+              <p class="testimonial-name">Viraj</p>
+              <p class="testimonial-location">Flex Iron transformed my fitness journey—no looking back now!</p>
+            </div>
+            <div>
+              <div class="img-wrapper">
+                <img
+                  src="assets/home/testimonials/8.jpg"
+                  alt="gym testimonials"
+                />
+              </div>
+              <p class="testimonial-name">Sakshi & Saachi</p>
+              <p class="testimonial-location">The vibe here is unmatched—fitness feels like fun at Flex Iron!</p>
             </div>
           </div>
         </div>
