--- a/contact-us.html
+++ b/contact-us.html
@@ -61,9 +61,7 @@
                 <a class="nav-link" href="unisex-thane.html">Unisex Thane</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" href="contact-us.html"
-                  >Contact Us</a
-                >
+                <a class="nav-link active" href="contact-us.html">Contact Us</a>
               </li>
             </ul>
           </div>
@@ -85,7 +83,7 @@
         />
       </section>
 
-      <section class="py-4 py-md-5" #locations>
+      <section class="py-4 py-md-5" id="connect">
         <div class="container">
           <h2>CONNECT WITH FLEX</h2>
           <p class="mb-4">We would love to hear from you!</p>
@@ -147,9 +145,17 @@
                   class="hidden"
                   style="display: none"
                 />
-                <input type="hidden" name="subject" value="New Enquiry from Website">
-                <input type="hidden" name="from_name" value="Flex Iron Gym">
-                <input type="hidden" name="redirect" value="http://127.0.0.1:5500/thank-you.html">
+                <input
+                  type="hidden"
+                  name="subject"
+                  value="New Enquiry from Website"
+                />
+                <input type="hidden" name="from_name" value="Flex Iron Gym" />
+                <input
+                  type="hidden"
+                  name="redirect"
+                  value="http://127.0.0.1:5500/thank-you.html"
+                />
                 <button type="submit">SUBMIT</button>
               </form>
             </div>
@@ -235,7 +241,7 @@
                 <li>
                   <a href="unisex-vikroli.html#memberships">Membership</a>
                 </li>
-                <li><a href="unisex-vikroli.html#offers">Offers</a></li>
+                <!-- <li><a href="unisex-vikroli.html#offers">Offers</a></li> -->
                 <li><a href="home.html#clients">Our Clients</a></li>
               </ul>
             </nav>
@@ -271,8 +277,8 @@
           </div>
           <div class="col-6 col-md-3">
             <p>Connect</p>
-            <input type="text" placeholder="Enter your email" />
-            <button>Submit</button>
+            <!-- <input type="text" placeholder="Enter your email" /> -->
+            <a href="contact-us.html#connect" class="contact-btn">Click here</a>
           </div>
         </div>
       </div>
