--- a/home.html
+++ b/home.html
@@ -259,8 +259,16 @@
       </section>
 
       <section class="highlight-banner-section">
-        <img class="d-none d-md-block" src="assets/banners/home-banner-two-web.jpg" alt="gym banner">
-        <img class="d-md-none" src="assets/banners/home-banner-two-mob.png" alt="gym banner">
+        <img
+          class="d-none d-md-block"
+          src="assets/banners/home-banner-two-web.jpg"
+          alt="gym banner"
+        />
+        <img
+          class="d-md-none"
+          src="assets/banners/home-banner-two-mob.png"
+          alt="gym banner"
+        />
       </section>
 
       <section class="py-4 py-md-5" id="clients">
@@ -275,8 +283,11 @@
                   alt="gym testimonials"
                 />
               </div>
-              <p class="testimonial-name">Lorem ipsum.</p>
-              <p class="testimonial-location">Flex Iron isn't just a gym, it's where I unlock my true strength!</p>
+              <p class="testimonial-name">Vijay Gharat</p>
+              <p class="testimonial-location">
+                Flex Iron isn't just a gym, it's where I unlock my true
+                strength!
+              </p>
             </div>
             <div>
               <div class="img-wrapper">
@@ -286,7 +297,10 @@
                 />
               </div>
               <p class="testimonial-name">Kimaya Berde</p>
-              <p class="testimonial-location">Every workout session here feels like a step closer to greatness!</p>
+              <p class="testimonial-location">
+                Every workout session here feels like a step closer to
+                greatness!
+              </p>
             </div>
             <div>
               <div class="img-wrapper">
@@ -296,7 +310,9 @@
                 />
               </div>
               <p class="testimonial-name">Sameer Dabilkar</p>
-              <p class="testimonial-location">The equipment is top-notch, and the energy is even better</p>
+              <p class="testimonial-location">
+                The equipment is top-notch, and the energy is even better
+              </p>
             </div>
             <div>
               <div class="img-wrapper">
@@ -306,7 +322,9 @@
                 />
               </div>
               <p class="testimonial-name">Sakshi Kunwar</p>
-              <p class="testimonial-location">My second home for fitness, fun, and fabulous results!</p>
+              <p class="testimonial-location">
+                My second home for fitness, fun, and fabulous results!
+              </p>
             </div>
             <div>
               <div class="img-wrapper">
@@ -316,7 +334,9 @@
                 />
               </div>
               <p class="testimonial-name">Pushkraj Bhosale</p>
-              <p class="testimonial-location">Breaking limits every day, thanks to the amazing Flex Iron team</p>
+              <p class="testimonial-location">
+                Breaking limits every day, thanks to the amazing Flex Iron team
+              </p>
             </div>
             <div>
               <div class="img-wrapper">
@@ -326,7 +346,9 @@
                 />
               </div>
               <p class="testimonial-name">Deepa Sapre</p>
-              <p class="testimonial-location">A gym where you feel supported, inspired, and unstoppable.</p>
+              <p class="testimonial-location">
+                A gym where you feel supported, inspired, and unstoppable.
+              </p>
             </div>
             <div>
               <div class="img-wrapper">
@@ -336,7 +358,9 @@
                 />
               </div>
               <p class="testimonial-name">Viraj</p>
-              <p class="testimonial-location">Flex Iron transformed my fitness journey—no looking back now!</p>
+              <p class="testimonial-location">
+                Flex Iron transformed my fitness journey—no looking back now!
+              </p>
             </div>
             <div>
               <div class="img-wrapper">
@@ -346,7 +370,9 @@
                 />
               </div>
               <p class="testimonial-name">Sakshi & Saachi</p>
-              <p class="testimonial-location">The vibe here is unmatched—fitness feels like fun at Flex Iron!</p>
+              <p class="testimonial-location">
+                The vibe here is unmatched—fitness feels like fun at Flex Iron!
+              </p>
             </div>
           </div>
         </div>
@@ -365,7 +391,7 @@
                 <li>
                   <a href="unisex-vikroli.html#memberships">Membership</a>
                 </li>
-                <li><a href="unisex-vikroli.html#offers">Offers</a></li>
+                <!-- <li><a href="unisex-vikroli.html#offers">Offers</a></li> -->
                 <li><a href="home.html#clients">Our Clients</a></li>
               </ul>
             </nav>
@@ -401,8 +427,8 @@
           </div>
           <div class="col-6 col-md-3">
             <p>Connect</p>
-            <input type="text" placeholder="Enter your email" />
-            <button>Submit</button>
+            <!-- <input type="text" placeholder="Enter your email" /> -->
+            <a href="contact-us.html#connect" class="contact-btn">Click here</a>
           </div>
         </div>
       </div>
