--- a/thank-you.html
+++ b/thank-you.html
@@ -26,13 +26,19 @@
         height: 100vh;
         height: 100dvh;
         width: 100vw;
-        background-image: url("/assets/banners/thankyou-banner.png");
-        background-repeat: no-repeat;
-        background-size: cover;
-        background-position: center center;
         display: flex;
         justify-content: center;
         align-items: center;
+        position: relative;
+      }
+      .bg-banner {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        z-index: -1;
       }
       .wrapper {
         width: 50%;
@@ -98,6 +104,11 @@
   </head>
   <body>
     <div class="wrapper">
+      <img
+        src="assets/banners/thankyou-banner.png"
+        alt="background image"
+        class="bg-banner"
+      />
       <h1>THANK YOU!</h1>
       <p>
         We have received your inquiry and will be getting in touch with you soon
