--- a/unisex-vikroli.html
+++ b/unisex-vikroli.html
@@ -99,10 +99,11 @@
       </section>
       <div class="container">
         <p class="py-4 py-md-5 intro">
-          Our Vikhroli gym is more than just a workout space. It's a place where
-          you can elevate your fitness routine with cutting-edge equipment,
-          expert guidance, and a community that inspires you to push your
-          limits.
+          Welcome to our state-of-the-art Unisex Gym in Vikhroli! Designed to
+          cater to both men and women, we offer a diverse range of fitness
+          solutions to help you achieve your health goals. Whether you’re a
+          beginner or a seasoned athlete, our gym provides a motivating and
+          inclusive environment for everyone.
         </p>
       </div>
 
@@ -182,10 +183,11 @@
             </div>
           </div>
           <p class="py-4 py-md-5 intro">
-            Our 5,000 square feet of space is designed with your fitness goals
-            in mind. With dedicated zones for cardio, strength training, and
-            functional fitness, you can easily switch between activities and
-            maximize your workout.
+            Our Vikhroli gym spans across 5,000 square feet, offering a spacious
+            workout area with dedicated sections for cardio, strength training,
+            and functional fitness. The gym is equipped with modern facilities,
+            high-end machines, and ample free weights for all your fitness
+            needs.
           </p>
         </div>
       </section>
@@ -200,7 +202,10 @@
                   class="row services-row px-md-4 gx-md-4 px-lg-5 gx-lg-5 gy-3"
                 >
                   <div class="col-12 col-md-5 col-lg-4">
-                    <img src="assets/vikhroli/services/1.jpeg" alt="gym services" />
+                    <img
+                      src="assets/vikhroli/services/1.jpeg"
+                      alt="gym services"
+                    />
                   </div>
                   <div class="col-12 col-md-7 col-lg-8">
                     <div class="service-text-wrapper">
@@ -217,7 +222,10 @@
                   class="row services-row px-md-4 gx-md-4 px-lg-5 gx-lg-5 gy-3"
                 >
                   <div class="col-12 col-md-5 col-lg-4">
-                    <img src="assets/vikhroli/services/2.jpeg" alt="gym services" />
+                    <img
+                      src="assets/vikhroli/services/2.jpeg"
+                      alt="gym services"
+                    />
                   </div>
                   <div class="col-12 col-md-7 col-lg-8">
                     <div class="service-text-wrapper">
@@ -234,7 +242,10 @@
                   class="row services-row px-md-4 gx-md-4 px-lg-5 gx-lg-5 gy-3"
                 >
                   <div class="col-12 col-md-5 col-lg-4">
-                    <img src="assets/vikhroli/services/3.jpeg" alt="gym services" />
+                    <img
+                      src="assets/vikhroli/services/3.jpeg"
+                      alt="gym services"
+                    />
                   </div>
                   <div class="col-12 col-md-7 col-lg-8">
                     <div class="service-text-wrapper">
@@ -251,7 +262,10 @@
                   class="row services-row px-md-4 gx-md-4 px-lg-5 gx-lg-5 gy-3"
                 >
                   <div class="col-12 col-md-5 col-lg-4">
-                    <img src="assets/vikhroli/services/4.jpeg" alt="gym services" />
+                    <img
+                      src="assets/vikhroli/services/4.jpeg"
+                      alt="gym services"
+                    />
                   </div>
                   <div class="col-12 col-md-7 col-lg-8">
                     <div class="service-text-wrapper">
@@ -269,7 +283,10 @@
                   class="row services-row px-md-4 gx-md-4 px-lg-5 gx-lg-5 gy-3"
                 >
                   <div class="col-12 col-md-5 col-lg-4">
-                    <img src="assets/vikhroli/services/5.jpeg" alt="gym services" />
+                    <img
+                      src="assets/vikhroli/services/5.jpeg"
+                      alt="gym services"
+                    />
                   </div>
                   <div class="col-12 col-md-7 col-lg-8">
                     <div class="service-text-wrapper">
@@ -286,7 +303,10 @@
                   class="row services-row px-md-4 gx-md-4 px-lg-5 gx-lg-5 gy-3"
                 >
                   <div class="col-12 col-md-5 col-lg-4">
-                    <img src="assets/vikhroli/services/6.jpeg" alt="gym services" />
+                    <img
+                      src="assets/vikhroli/services/6.jpeg"
+                      alt="gym services"
+                    />
                   </div>
                   <div class="col-12 col-md-7 col-lg-8">
                     <div class="service-text-wrapper">
@@ -303,7 +323,10 @@
                   class="row services-row px-md-4 gx-md-4 px-lg-5 gx-lg-5 gy-3"
                 >
                   <div class="col-12 col-md-5 col-lg-4">
-                    <img src="assets/vikhroli/services/7.jpeg" alt="gym services" />
+                    <img
+                      src="assets/vikhroli/services/7.jpeg"
+                      alt="gym services"
+                    />
                   </div>
                   <div class="col-12 col-md-7 col-lg-8">
                     <div class="service-text-wrapper">
@@ -332,7 +355,7 @@
             </div>
             <div>
               <div class="gallery-img-wrapper">
-                <img src="assets/vikhroli/2.png" alt="gym gallery" />
+                <img src="assets/vikhroli/11.png" alt="gym gallery" />
               </div>
             </div>
             <div>
@@ -347,82 +370,7 @@
             </div>
             <div>
               <div class="gallery-img-wrapper">
-                <img src="assets/vikhroli/5.png" alt="gym gallery" />
-              </div>
-            </div>
-            <div>
-              <div class="gallery-img-wrapper">
-                <img src="assets/vikhroli/6.png" alt="gym gallery" />
-              </div>
-            </div>
-            <div>
-              <div class="gallery-img-wrapper">
-                <img src="assets/vikhroli/7.png" alt="gym gallery" />
-              </div>
-            </div>
-            <div>
-              <div class="gallery-img-wrapper">
-                <img src="assets/vikhroli/8.png" alt="gym gallery" />
-              </div>
-            </div>
-            <div>
-              <div class="gallery-img-wrapper">
-                <img src="assets/vikhroli/9.png" alt="gym gallery" />
-              </div>
-            </div>
-            <div>
-              <div class="gallery-img-wrapper">
-                <img src="assets/vikhroli/10.png" alt="gym gallery" />
-              </div>
-            </div>
-            <div>
-              <div class="gallery-img-wrapper">
-                <img src="assets/vikhroli/11.png" alt="gym gallery" />
-              </div>
-            </div>
-            <div>
-              <div class="gallery-img-wrapper">
-                <img src="assets/vikhroli/12.png" alt="gym gallery" />
-              </div>
-            </div>
-            <div>
-              <div class="gallery-img-wrapper">
-                <img src="assets/vikhroli/13.png" alt="gym gallery" />
-              </div>
-            </div>
-            <div>
-              <div class="gallery-img-wrapper">
-                <img src="assets/vikhroli/14.png" alt="gym gallery" />
-              </div>
-            </div>
-            <div>
-              <div class="gallery-img-wrapper">
-                <img src="assets/vikhroli/15.png" alt="gym gallery" />
-              </div>
-            </div>
-            <div>
-              <div class="gallery-img-wrapper">
                 <img src="assets/vikhroli/16.png" alt="gym gallery" />
-              </div>
-            </div>
-            <div>
-              <div class="gallery-img-wrapper">
-                <img src="assets/vikhroli/17.png" alt="gym gallery" />
-              </div>
-            </div>
-            <div>
-              <div class="gallery-img-wrapper">
-                <img src="assets/vikhroli/18.png" alt="gym gallery" />
-              </div>
-            </div>
-            <div>
-              <div class="gallery-img-wrapper">
-                <img src="assets/vikhroli/19.png" alt="gym gallery" />
-              </div>
-            </div>
-            <div>
-              <div class="gallery-img-wrapper">
-                <img src="assets/vikhroli/20.png" alt="gym gallery" />
               </div>
             </div>
             <div>
@@ -432,14 +380,64 @@
             </div>
             <div>
               <div class="gallery-img-wrapper">
-                <img src="assets/vikhroli/22.png" alt="gym gallery" />
+                <img src="assets/vikhroli/2.png" alt="gym gallery" />
               </div>
             </div>
+            <div>
+              <div class="gallery-img-wrapper">
+                <img src="assets/vikhroli/30.png" alt="gym gallery" />
+              </div>
+            </div>
+
             <div>
               <div class="gallery-img-wrapper">
                 <img src="assets/vikhroli/23.png" alt="gym gallery" />
               </div>
             </div>
+            <div>
+              <div class="gallery-img-wrapper">
+                <img src="assets/vikhroli/15.png" alt="gym gallery" />
+              </div>
+            </div>
+            <div>
+              <div class="gallery-img-wrapper">
+                <img src="assets/vikhroli/6.png" alt="gym gallery" />
+              </div>
+            </div>
+
+            <div>
+              <div class="gallery-img-wrapper">
+                <img src="assets/vikhroli/5.png" alt="gym gallery" />
+              </div>
+            </div>
+            <div>
+              <div class="gallery-img-wrapper">
+                <img src="assets/vikhroli/31.png" alt="gym gallery" />
+              </div>
+            </div>
+            <div>
+              <div class="gallery-img-wrapper">
+                <img src="assets/vikhroli/32.png" alt="gym gallery" />
+              </div>
+            </div>
+            <div>
+              <div class="gallery-img-wrapper">
+                <img src="assets/vikhroli/9.png" alt="gym gallery" />
+              </div>
+            </div>
+
+            <div>
+              <div class="gallery-img-wrapper">
+                <img src="assets/vikhroli/20.png" alt="gym gallery" />
+              </div>
+            </div>
+
+            <div>
+              <div class="gallery-img-wrapper">
+                <img src="assets/vikhroli/22.png" alt="gym gallery" />
+              </div>
+            </div>
+
             <div>
               <div class="gallery-img-wrapper">
                 <img src="assets/vikhroli/24.png" alt="gym gallery" />
@@ -448,6 +446,11 @@
             <div>
               <div class="gallery-img-wrapper">
                 <img src="assets/vikhroli/25.png" alt="gym gallery" />
+              </div>
+            </div>
+            <div>
+              <div class="gallery-img-wrapper">
+                <img src="assets/vikhroli/17.png" alt="gym gallery" />
               </div>
             </div>
             <div>
@@ -462,6 +465,11 @@
             </div>
             <div>
               <div class="gallery-img-wrapper">
+                <img src="assets/vikhroli/8.png" alt="gym gallery" />
+              </div>
+            </div>
+            <div>
+              <div class="gallery-img-wrapper">
                 <img src="assets/vikhroli/28.png" alt="gym gallery" />
               </div>
             </div>
@@ -470,21 +478,7 @@
                 <img src="assets/vikhroli/29.png" alt="gym gallery" />
               </div>
             </div>
-            <div>
-              <div class="gallery-img-wrapper">
-                <img src="assets/vikhroli/30.png" alt="gym gallery" />
-              </div>
-            </div>
-            <div>
-              <div class="gallery-img-wrapper">
-                <img src="assets/vikhroli/31.png" alt="gym gallery" />
-              </div>
-            </div>
-            <div>
-              <div class="gallery-img-wrapper">
-                <img src="assets/vikhroli/32.png" alt="gym gallery" />
-              </div>
-            </div>
+
             <div>
               <div class="gallery-img-wrapper">
                 <img src="assets/vikhroli/33.png" alt="gym gallery" />
@@ -524,7 +518,10 @@
                   class="row services-row px-md-4 gx-md-4 px-lg-5 gx-lg-5 gy-3"
                 >
                   <div class="col-12 col-md-5 col-lg-4">
-                    <img src="assets/vikhroli/services/1.jpeg" alt="gym services" />
+                    <img
+                      src="assets/vikhroli/services/1.jpeg"
+                      alt="gym services"
+                    />
                   </div>
                   <div class="col-12 col-md-7 col-lg-8">
                     <div class="service-text-wrapper">
@@ -541,7 +538,10 @@
                   class="row services-row px-md-4 gx-md-4 px-lg-5 gx-lg-5 gy-3"
                 >
                   <div class="col-12 col-md-5 col-lg-4">
-                    <img src="assets/vikhroli/services/1.jpeg" alt="gym services" />
+                    <img
+                      src="assets/vikhroli/services/1.jpeg"
+                      alt="gym services"
+                    />
                   </div>
                   <div class="col-12 col-md-7 col-lg-8">
                     <div class="service-text-wrapper">
@@ -558,7 +558,10 @@
                   class="row services-row px-md-4 gx-md-4 px-lg-5 gx-lg-5 gy-3"
                 >
                   <div class="col-12 col-md-5 col-lg-4">
-                    <img src="assets/vikhroli/services/1.jpeg" alt="gym services" />
+                    <img
+                      src="assets/vikhroli/services/1.jpeg"
+                      alt="gym services"
+                    />
                   </div>
                   <div class="col-12 col-md-7 col-lg-8">
                     <div class="service-text-wrapper">
@@ -575,7 +578,10 @@
                   class="row services-row px-md-4 gx-md-4 px-lg-5 gx-lg-5 gy-3"
                 >
                   <div class="col-12 col-md-5 col-lg-4">
-                    <img src="assets/vikhroli/services/1.jpeg" alt="gym services" />
+                    <img
+                      src="assets/vikhroli/services/1.jpeg"
+                      alt="gym services"
+                    />
                   </div>
                   <div class="col-12 col-md-7 col-lg-8">
                     <div class="service-text-wrapper">
@@ -640,7 +646,7 @@
                 <li>
                   <a href="unisex-vikroli.html#memberships">Membership</a>
                 </li>
-                <li><a href="unisex-vikroli.html#offers">Offers</a></li>
+                <!-- <li><a href="unisex-vikroli.html#offers">Offers</a></li> -->
                 <li><a href="home.html#clients">Our Clients</a></li>
               </ul>
             </nav>
@@ -676,8 +682,8 @@
           </div>
           <div class="col-6 col-md-3">
             <p>Connect</p>
-            <input type="text" placeholder="Enter your email" />
-            <button>Submit</button>
+            <!-- <input type="text" placeholder="Enter your email" /> -->
+            <a href="contact-us.html#connect" class="contact-btn">Click here</a>
           </div>
         </div>
       </div>
