Pre live final changes

--- a/home.html
+++ b/home.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home - Flex Iron</title>
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link rel="preconnect" href="https://cdn.jsdelivr.net" />
@@ -158,12 +161,12 @@
             </div>
             <div class="col-6 col-md-5">
               <div class="img-wrapper left-wrapper">
-                <img src="assets/founder.jpg" alt="flexiron founder" />
+                <img src="assets/home/owner.png" alt="flexiron founder" />
               </div>
             </div>
             <div class="col-6 col-md-5">
               <div class="img-wrapper right-wrapper">
-                <img src="assets/trainer.webp" alt="flexiron trainers" />
+                <img src="assets/home/trainer.webp" alt="flexiron trainers" />
               </div>
             </div>
             <div class="col-1 d-none d-md-block">
