--- a/contact-us.html
+++ b/contact-us.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Contact Us - Flex Iron</title>
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -154,7 +157,7 @@
                 <input
                   type="hidden"
                   name="redirect"
-                  value="http://127.0.0.1:5500/thank-you.html"
+                  value="https://www.theflexirongym.in//thank-you.html"
                 />
                 <button type="submit">SUBMIT</button>
               </form>
