--- a/unisex-thane.html
+++ b/unisex-thane.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Unisex Gym Thane - Flex Iron</title>
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -447,7 +450,7 @@
                 >
                   <div class="col-12 col-md-5 col-lg-4">
                     <img
-                      src="assets/vikhroli/services/1.jpeg"
+                      src="assets/memberships/1.png"
                       alt="gym services"
                     />
                   </div>
@@ -467,7 +470,7 @@
                 >
                   <div class="col-12 col-md-5 col-lg-4">
                     <img
-                      src="assets/vikhroli/services/1.jpeg"
+                      src="assets/memberships/2.png"
                       alt="gym services"
                     />
                   </div>
@@ -487,7 +490,7 @@
                 >
                   <div class="col-12 col-md-5 col-lg-4">
                     <img
-                      src="assets/vikhroli/services/1.jpeg"
+                      src="assets/memberships/3.png"
                       alt="gym services"
                     />
                   </div>
@@ -507,7 +510,7 @@
                 >
                   <div class="col-12 col-md-5 col-lg-4">
                     <img
-                      src="assets/vikhroli/services/1.jpeg"
+                      src="assets/memberships/4.png"
                       alt="gym services"
                     />
                   </div>
