--- a/unisex-vikroli.html
+++ b/unisex-vikroli.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Unisex Gym Vikhroli - Flex Iron</title>
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -518,10 +521,7 @@
                   class="row services-row px-md-4 gx-md-4 px-lg-5 gx-lg-5 gy-3"
                 >
                   <div class="col-12 col-md-5 col-lg-4">
-                    <img
-                      src="assets/vikhroli/services/1.jpeg"
-                      alt="gym services"
-                    />
+                    <img src="assets/memberships/1.png" alt="gym services" />
                   </div>
                   <div class="col-12 col-md-7 col-lg-8">
                     <div class="service-text-wrapper">
@@ -538,10 +538,7 @@
                   class="row services-row px-md-4 gx-md-4 px-lg-5 gx-lg-5 gy-3"
                 >
                   <div class="col-12 col-md-5 col-lg-4">
-                    <img
-                      src="assets/vikhroli/services/1.jpeg"
-                      alt="gym services"
-                    />
+                    <img src="assets/memberships/2.png" alt="gym services" />
                   </div>
                   <div class="col-12 col-md-7 col-lg-8">
                     <div class="service-text-wrapper">
@@ -558,10 +555,7 @@
                   class="row services-row px-md-4 gx-md-4 px-lg-5 gx-lg-5 gy-3"
                 >
                   <div class="col-12 col-md-5 col-lg-4">
-                    <img
-                      src="assets/vikhroli/services/1.jpeg"
-                      alt="gym services"
-                    />
+                    <img src="assets/memberships/3.png" alt="gym services" />
                   </div>
                   <div class="col-12 col-md-7 col-lg-8">
                     <div class="service-text-wrapper">
@@ -578,10 +572,7 @@
                   class="row services-row px-md-4 gx-md-4 px-lg-5 gx-lg-5 gy-3"
                 >
                   <div class="col-12 col-md-5 col-lg-4">
-                    <img
-                      src="assets/vikhroli/services/1.jpeg"
-                      alt="gym services"
-                    />
+                    <img src="assets/memberships/4.png" alt="gym services" />
                   </div>
                   <div class="col-12 col-md-7 col-lg-8">
                     <div class="service-text-wrapper">
