--- a/women-only-vikroli.html
+++ b/women-only-vikroli.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Women Only Gym Vikhroli - Flex Iron</title>
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -525,17 +528,14 @@
                   class="row services-row px-md-4 gx-md-4 px-lg-5 gx-lg-5 gy-3"
                 >
                   <div class="col-12 col-md-5 col-lg-4">
-                    <img
-                      src="assets/vikhroli/services/1.jpeg"
-                      alt="gym services"
-                    />
+                    <img src="assets/memberships/1.png" alt="gym services" />
                   </div>
                   <div class="col-12 col-md-7 col-lg-8">
                     <div class="service-text-wrapper">
                       <p class="service-name">
                         Monthly Membership Cost <span>( 1 Month )</span>
                       </p>
-                      <p class="service-name">₹ 2,500</p>
+                      <p class="service-name">₹ 3,000</p>
                     </div>
                   </div>
                 </div>
@@ -545,17 +545,14 @@
                   class="row services-row px-md-4 gx-md-4 px-lg-5 gx-lg-5 gy-3"
                 >
                   <div class="col-12 col-md-5 col-lg-4">
-                    <img
-                      src="assets/vikhroli/services/1.jpeg"
-                      alt="gym services"
-                    />
+                    <img src="assets/memberships/2.png" alt="gym services" />
                   </div>
                   <div class="col-12 col-md-7 col-lg-8">
                     <div class="service-text-wrapper">
                       <p class="service-name">
                         Quarterly Membership Cost <span>( 3 Months )</span>
                       </p>
-                      <p class="service-name">₹ 5,500</p>
+                      <p class="service-name">₹ 6,000</p>
                     </div>
                   </div>
                 </div>
@@ -565,17 +562,14 @@
                   class="row services-row px-md-4 gx-md-4 px-lg-5 gx-lg-5 gy-3"
                 >
                   <div class="col-12 col-md-5 col-lg-4">
-                    <img
-                      src="assets/vikhroli/services/1.jpeg"
-                      alt="gym services"
-                    />
+                    <img src="assets/memberships/3.png" alt="gym services" />
                   </div>
                   <div class="col-12 col-md-7 col-lg-8">
                     <div class="service-text-wrapper">
                       <p class="service-name">
                         Bi-Annual Membership Cost <span>( 6 Months )</span>
                       </p>
-                      <p class="service-name">₹ 7,500</p>
+                      <p class="service-name">₹ 8,000</p>
                     </div>
                   </div>
                 </div>
@@ -585,17 +579,14 @@
                   class="row services-row px-md-4 gx-md-4 px-lg-5 gx-lg-5 gy-3"
                 >
                   <div class="col-12 col-md-5 col-lg-4">
-                    <img
-                      src="assets/vikhroli/services/1.jpeg"
-                      alt="gym services"
-                    />
+                    <img src="assets/memberships/4.png" alt="gym services" />
                   </div>
                   <div class="col-12 col-md-7 col-lg-8">
                     <div class="service-text-wrapper">
                       <p class="service-name">
                         Annual Membership Cost <span>( 12 Months )</span>
                       </p>
-                      <p class="service-name">₹ 9,000</p>
+                      <p class="service-name">₹ 10,000</p>
                     </div>
                   </div>
                 </div>
