--- a/thank-you.html
+++ b/thank-you.html
@@ -116,7 +116,7 @@
       <p>
         We have received your inquiry and will be getting in touch with you soon
       </p>
-      <a href="home.html" class="bttn">Back to home</a>
+      <a href="/" class="bttn">Back to home</a>
       <div class="social-icons">
         <a
           href="https://www.instagram.com/theflexirongym/?hl=en"
