--- a/women-only-vikroli.html
+++ b/women-only-vikroli.html
@@ -43,7 +43,7 @@
       </div>
       <nav class="navbar navbar-expand-lg py-3" data-bs-theme="dark" .>
         <div class="container">
-          <a class="navbar-brand" href="home.html"
+          <a class="navbar-brand" href="/"
             ><img src="assets/logo.png" alt="flexiron gym logo"
           /></a>
           <button
@@ -60,7 +60,7 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav w-100 justify-content-evenly ms-lg-5">
               <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="home.html"
+                <a class="nav-link" aria-current="page" href="/"
                   >Home</a
                 >
               </li>
@@ -639,13 +639,13 @@
             <p>Flex Iron</p>
             <nav>
               <ul>
-                <li><a href="home.html#our-team">Our Team</a></li>
+                <li><a href="/#our-team">Our Team</a></li>
                 <li><a href="unisex-vikroli.html#services">Services</a></li>
                 <li>
                   <a href="unisex-vikroli.html#memberships">Membership</a>
                 </li>
                 <!-- <li><a href="unisex-vikroli.html#offers">Offers</a></li> -->
-                <li><a href="home.html#clients">Our Clients</a></li>
+                <li><a href="/#clients">Our Clients</a></li>
               </ul>
             </nav>
           </div>
