Last fix hopefully

--- a/index.html
+++ b/index.html
@@ -389,13 +389,13 @@
             <p>Flex Iron</p>
             <nav>
               <ul>
-                <li><a href="#our-team">Our Team</a></li>
+                <li><a href="/#our-team">Our Team</a></li>
                 <li><a href="unisex-vikroli.html#services">Services</a></li>
                 <li>
                   <a href="unisex-vikroli.html#memberships">Membership</a>
                 </li>
                 <!-- <li><a href="unisex-vikroli.html#offers">Offers</a></li> -->
-                <li><a href="#clients">Our Clients</a></li>
+                <li><a href="/#clients">Our Clients</a></li>
               </ul>
             </nav>
           </div>
