--- a/contact-us.html
+++ b/contact-us.html
@@ -46,9 +46,7 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav w-100 justify-content-evenly ms-lg-5">
               <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="/"
-                  >Home</a
-                >
+                <a class="nav-link" aria-current="page" href="/">Home</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="unisex-vikroli.html"
@@ -157,7 +155,7 @@
                 <input
                   type="hidden"
                   name="redirect"
-                  value="https://www.theflexirongym.in//thank-you.html"
+                  value="https://theflexirongym.com/thank-you.html"
                 />
                 <button type="submit">SUBMIT</button>
               </form>
